[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Pause_Screen.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Planes_ValMore.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.658824, 0.964706, 0.596078, 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
outline_size = 2
outline_color = Color( 0.109804, 0.384314, 0.133333, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 25
outline_size = 2
outline_color = Color( 0.607843, 0.0705882, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="Pause_Screen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.819608, 0.811765, 0.843137, 0 )
self_modulate = Color( 1, 1, 1, 0.45098 )
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.996078, 0.85098, 0.85098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 315.0
margin_top = 246.0
margin_right = 709.0
margin_bottom = 354.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 394.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "The Game Was Paused"

[node name="Button" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 394.0
margin_bottom = 72.0
custom_styles/hover = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
toggle_mode = true
text = "Resume"
flat = true

[node name="Button2" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 394.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 4 )
text = "Quit"
flat = true
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
